# rayflex

./: '  .gitignore  Cargo.toml  README.md  index.html  scene.json
.github/workflows/: ci.yml  linux.yml  macos.yml
assets/: manifest.json  sw.js
scene/: scene-teapot.json
scenes/: buddha.json  cornell-box.json  cow.json  sphere-box.json  sphere-nobox.json  teapot.json  test.json  trolley.json
src/: aabb.rs  app.rs  camera.rs  color.rs  ctrlc_hit.rs  image.rs  lib.rs  light.rs  main.rs  material.rs  render.rs  scene.rs  three_d.rs  vec3.rs
test/: buddha.json  cow.json  scene-buddha.json  scene-cow.json  scene-sphere.json  scene-teapot.json  scene-trolley.json  sphere-box.json  sphere-nobox.json  teapot.json  trolley.json
tests/: cli.rs
