[package]
name = "raymax"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.20", features = ["derive"] }
ctrlc = "3.2.3"
image = "0.24.5"
indicatif = "0.17.2"
rand = "0.8.5"
rayon = "1.5.3"
serde_json = "1.0.87"
structopt = "0.3.26"
