[package]
name = "rayflex"
version = "0.1.0"
edition = "2024"
authors = ["Maxime Austruy <austruym@gmail.com>"]

[profile.release]
debug = true

[dependencies]
clap = { version = "4.0.20", features = ["derive"] }
eframe = { version = "0.20.1" }
egui = "0.20.1"
rayon = "1.5.3"
rand = "0.8.5"
image = "0.24.5"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
structopt = "0.3.26"
tobj = "3.2.3"
log = "0.4.17"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
assert_cmd = "2.0.6"
colored = "2.0.0"
ctrlc = "3.2.3"
indicatif = "0.17.2"
tracing-subscriber = "0.3.16"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"
console_log = "0.2.0"
