[package]
name = "rayflex"
version = "0.1.0"
edition = "2024"
authors = ["Maxime Austruy <austruym@gmail.com>"]

[profile.release]
debug = true

[dependencies]
clap = { version = "4.5.34", features = ["derive"] }
eframe = "0.31.1"
egui = "0.31.1"
rayon = "1.10.0"
rand = "0.8.5"
image = "0.24.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.87"
structopt = "0.3.26"
tobj = "3.2.3"
log = "0.4.27"
assert_cmd = "2.0.6"
colored = "3.0.0"
ctrlc = "3.2.3"
indicatif = "0.17.2"
tracing-subscriber = "0.3.16"
